services/rxjava-gateway/gateway-client/k8s/gateway-client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-client
  labels:
    app: gateway-client
spec:
  replicas: 1
  template:
    metadata:
      name: gateway-client
      labels:
        app: gateway-client
    spec:
      containers:
        - name: gateway-client
          image: registry.cn-shanghai.aliyuncs.com/taro-mall/gateway-client:latest
          imagePullPolicy: Always
      restartPolicy: Always
  selector:
    matchLabels:
      app: gateway-client
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-client
spec:
  selector:
    app: gateway-client
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  type: LoadBalancer
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gateway-client
spec:
  rules:
    - host: client.example.com
      http:
        paths:
          - backend:
              serviceName: gateway-client
              servicePort: 80
